<resources>
    <string name="app_name">ouralarm</string>
    <string name="title_activity_happy_birthday">HappyBirthday</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="editexthint">****</string>
    <string name="sendNotBut">Sürpriz</string>

    <string name="Halimem1">Hiç gözlerine bu kadar AŞKLA bakamamıştım</string>
    <string name="Halimem2">Aklım başımda değil hep SEN\'de</string>
    <string name="Halimem3">Leyleklerin haberlerini bekliyor yüreğim</string>
    <string name="Halimem4">İnce ince esen rüzgardan topluyorum kokunu</string>
    <string name="Halimem5">Menekşe, lale, gül, sümbül kokusunda arıyorum</string>
    <string name="Halimem6">Enginleri aşıp SANA koşmak için yanıyor yüreğim, bedenim</string>
    <string name="Halimem7">Meğer özlemimiz de SEVGİMİZ kadar büyükmüş, güzelmiş</string>

    <string name="contentText">****</string>
    <string name="contentTitle">Sürprizzzzzzzzzzzz AŞKIMMMMMMMM</string>
    <string name="bigcontent">İyki Doğdun PRENSESİMMMM</string>
    <string name="sum">HS</string>
</resources>