<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HappyBitrhday"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/mainBack"
        android:padding="12dp">
        <TextView
            android:text="@string/Halimem1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>

        <TextView
            android:text="@string/Halimem2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>
        <TextView
            android:text="@string/Halimem3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>
        <TextView
            android:text="@string/Halimem4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>
        <TextView
            android:text="@string/Halimem5"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>
        <TextView
            android:text="@string/Halimem6"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>
        <TextView
            android:text="@string/Halimem7"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:background="@drawable/text_gradient"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textAlignment="center"
            >

        </TextView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>